remove images folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="venrif">
         <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#venrif"><img src="/assets/images/titlecard.png" alt=""></a>
+                <a class="navbar-brand" href="#venrif"><img src="/images/titlecard.png" alt=""></a>
                 <!-- button for hamburger icon -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -110,7 +110,7 @@
         
     <section id="footer">
         <footer class="p-3">
-            <img src="assets/images/vilein-logo.png" alt="" class="py-3">
+            <img src="/images/vilein-logo.png" alt="" class="py-3">
             <p >&copy; 2024 Vilein.</p>
         </footer>
     </section>
