--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- landing page -->
+    
     <section id="venrif">
         <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#venrif"><img src="images/titlecard.png" alt=""></a>
+                <a class="navbar-brand" href="#venrif"><img src="images/titlecard.png" alt="venrif-logo"></a>
                 <!-- button for hamburger icon -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,6 +54,7 @@
 
     <section id="gameplay" class="px-3">
         <div class="div-container">
+            <img src="images/screenshot0.webp" class="container-fluid p-3 mt-3" alt="gameplay-screenshot">
             <h1 class="py-3 px-5">GAMEPLAY</h1>
             <p class="py-0 px-5">Summon fantastic creatures, cast destructive spells, and build towering structures... at a flick of a card! 
             </p>
@@ -61,12 +62,14 @@
                 Ven'rif is a casual fast paced real-time strategy game where you must construct a deck of cards and fight against other players
             </p>
         </div>
-        <div class="row align-items-center p-5">
+        <div class="row p-4">
             <article class="col-lg p-4">
+                <img src="images/screenshot1.webp" class="container-fluid p-3" alt="unique-playstyle-screenshot">
                 <h2>Develop Unique Playstyle</h2>
                 <p class="py-3">Ven'rif's is designed for players to construct their deck differently from other players, making the player pool more diversified in terms of playstyle. This new found ecosystem will foster a healthier game cycle for players to thrive in indefinitely.</p>
             </article>
             <article class="col-lg p-4">
+                <img src="images/screenshot2.webp" class="container-fluid p-3" alt="casual/sophisticated-gameplay-screenshot">
                 <h2 class="px-2">Looking Casual on the Outside, Sophisticated Gameplay on the Inside</h2>
             <p class="py-3">A steep learning curve has always been the deal-breaker for most casual players but Ven'rif has made it possible for a sophisticated gameplay to be so easily learned.</p>
             </article>
@@ -111,11 +114,10 @@
         
     <section id="footer">
         <footer class="p-3">
-            <img src="images/vilein-logo.png" alt="" class="py-3">
+            <img src="images/vilein-logo.png" alt="venrif-logo" class="py-3">
             <p >&copy; 2024 Vilein.</p>
         </footer>
     </section>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
